--- a/App.config
+++ b/App.config
@@ -13,24 +13,33 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup>
     <userSettings>
         <BarcodetoFile.Properties.Settings>
+            <setting name="save_path" serializeAs="String">
+                <value>C:\SavePath</value>
+            </setting>
             <setting name="lastfile" serializeAs="String">
                 <value>lastfile </value>
             </setting>
             <setting name="Serial_com" serializeAs="String">
                 <value>COM5</value>
             </setting>
+            <setting name="log_path" serializeAs="String">
+                <value>C:\SavePath\Log</value>
+            </setting>
+            <setting name="read_path" serializeAs="String">
+                <value>C:\ReadPath</value>
+            </setting>
+            <setting name="move_path" serializeAs="String">
+                <value>C:\SavePath\Processed</value>
+            </setting>
+            <setting name="move_enabled" serializeAs="String">
+                <value>False</value>
+            </setting>
         </BarcodetoFile.Properties.Settings>
     </userSettings>
     <applicationSettings>
         <BarcodetoFile.Properties.Settings>
-            <setting name="save_path" serializeAs="String">
-                <value>G:\</value>
-            </setting>
             <setting name="file_name" serializeAs="String">
                 <value>Scanner.csv</value>
-            </setting>
-            <setting name="log_path" serializeAs="String">
-                <value>logpath</value>
             </setting>
             <setting name="time_out_minimize" serializeAs="String">
                 <value>60</value>
