--- a/App.config
+++ b/App.config
@@ -14,7 +14,7 @@
     <userSettings>
         <BarcodetoFile.Properties.Settings>
             <setting name="save_path" serializeAs="String">
-                <value>C:\SavePath</value>
+                <value>C:\TempMsg</value>
             </setting>
             <setting name="lastfile" serializeAs="String">
                 <value>lastfile </value>
@@ -23,16 +23,28 @@
                 <value>COM5</value>
             </setting>
             <setting name="log_path" serializeAs="String">
-                <value>C:\SavePath\Log</value>
+                <value>C:\Log</value>
             </setting>
             <setting name="read_path" serializeAs="String">
-                <value>C:\ReadPath</value>
+                <value>S:\</value>
             </setting>
             <setting name="move_path" serializeAs="String">
-                <value>C:\SavePath\Processed</value>
+                <value>S:\Archive</value>
             </setting>
             <setting name="move_enabled" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="ftpServerName" serializeAs="String">
+                <value>ftp://ADM:574510@192.168.85.205/</value>
+            </setting>
+            <setting name="ftpUser" serializeAs="String">
+                <value>ADM</value>
+            </setting>
+            <setting name="ftpPassword" serializeAs="String">
+                <value>574510</value>
+            </setting>
+            <setting name="ftpEnabled" serializeAs="String">
+                <value>True</value>
             </setting>
         </BarcodetoFile.Properties.Settings>
     </userSettings>
