--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="save_path" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\SavePath</Value>
+      <Value Profile="(Default)">C:\TempMsg</Value>
     </Setting>
     <Setting Name="lastfile" Type="System.String" Scope="User">
       <Value Profile="(Default)">lastfile </Value>
@@ -15,19 +15,31 @@
       <Value Profile="(Default)">Scanner.csv</Value>
     </Setting>
     <Setting Name="log_path" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\SavePath\Log</Value>
+      <Value Profile="(Default)">C:\Log</Value>
     </Setting>
     <Setting Name="time_out_minimize" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">60</Value>
     </Setting>
     <Setting Name="read_path" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\ReadPath</Value>
+      <Value Profile="(Default)">S:\</Value>
     </Setting>
     <Setting Name="move_path" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\SavePath\Processed</Value>
+      <Value Profile="(Default)">S:\Archive</Value>
     </Setting>
     <Setting Name="move_enabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ftpServerName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">ftp://ADM:574510@192.168.85.205/</Value>
+    </Setting>
+    <Setting Name="ftpUser" Type="System.String" Scope="User">
+      <Value Profile="(Default)">ADM</Value>
+    </Setting>
+    <Setting Name="ftpPassword" Type="System.String" Scope="User">
+      <Value Profile="(Default)">574510</Value>
+    </Setting>
+    <Setting Name="ftpEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
